Se agrega import de siteHeader

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,9 +1,10 @@
 ---
 import "../styles/global.css";
+import SiteHeader from "../components/SiteHeader.astro";	
 const { title = "Mi Sublimar" } = Astro.props;
 ---
 <!doctype html>
-<html lang="en">
+<html lang="es">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
