--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,10 @@ const { title = "Mi Sublimar" } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="min-h-screen bg-neutral-50 text-neutral-900">
-		<slot />
+		<SiteHeader />
+		<main>
+			<slot />
+		</main>
 	</body>
 </html>
 
