--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,13 @@
 ---
 import Welcome from '../components/Welcome.astro';
 import Layout from '../layouts/Layout.astro';
+import SectionBanner from "../components/SectionBanner.astro";
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
+<!--
 <Layout title = "Mi Sublimar">
+	
 	<header class="sticky top-0 z-50 border-b bg-white/80 backdrop-blur">
 		<div class="mx-auto flex max-w-6xl items-center justify-between px-4 py-3">
 
@@ -53,6 +56,19 @@ import Layout from '../layouts/Layout.astro';
 			</div>
 			</section>
 	</main>
+
+	 -->
+
+	<Layout title="Mi Sublimar">
+	<SectionBanner
+		imageSrc="/portada-dg.jpg"
+		imageAlt="Diseño gráfico"
+		eyebrow="category: Diseño gráfico"
+		title="Angelina, diseñadora gráfica editorial."
+		description="Bienvenidos, en esta sección de mi web podrán ver una breve selección..."
+  	/>
+	</Layout>
+
 </Layout>
 
 
